# Advanced-SQL-Agent

./: .gitignore  README.md  app.pid  checkpoints.db  checkpoints.db-shm  checkpoints.db-wal  intellidesign.db  langgraph.json  output.json  pyproject.toml  restart.sh  run.sh  sql_agent.db  sql_agent.py  start.sh  stop.sh
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/: get_context_example.py  run_service.py
src/agents/: llm.py  vectorstore.py
src/agents/adaptive_rag_agent/: adaptive_rag_agent.py  prompts.py  structured_outputs.py
src/agents/react_agent/: react_agent.py
src/agents/sql_agent/: add_context.py  prompts.py  schema.py  sql_agent.py  structured_outputs.py
src/eval/: query_gen.py  retrieval_eval.py  scoring.py
src/service/: __init__.py  agents.py  app.py  memory.py  schema.py  settings.py  utils.py
