[project]
name = "sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.0.2",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.49",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.20",
    "pydantic>=2.10.6",
    "pymysql>=1.1.1",
]
